tests/src/errors/terminal_not_defined/terminal_not_defined_sugar.rustemo
A: B+ 'c'+;

terminals
B: 'b';
