tests/src/errors/terminal_not_defined/terminal_not_defined_sugar.err
Error at /home/igor/repos/rust/rustemo/tests/src/errors/terminal_not_defined/terminal_not_defined_sugar.rustemo:1:6:
	Terminal "c" is not defined in the terminals section.